--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Module 11</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+
+<form class="search-form js-search-form" id="search-form">
+  <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+  <button class="search-form__button js-search-btn" type="submit">
+    <img class="logo-search" src="/src/images/search.png" alt="" loading="lazy" />
+ </button>
+</form>
+
+<div class="gallery">
+  <!-- Карточки изображений -->
+</div>
+
+      <div class="container_load-more">
+        <button type="button" class="load-more is-hidden"> Load More
+</button>
+      </div>
+
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <script type="module" src="./index.js"></script>
+
   </body>
 </html>
