--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <form class="search-form js-search-form" id="search-form">
   <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
   <button class="search-form__button js-search-btn" type="submit">
-    <img class="logo-search" src="./images/search.png" alt="" loading="lazy" />
+    <img class="logo-search" src="../src/images/search.png" alt="search" loading="lazy" />
  </button>
 </form>
 
