--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Module 11</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
+    <!-- <link rel="stylesheet" href="./sass/index.scss" /> -->
 
 <form class="search-form js-search-form" id="search-form">
   <input class="search-form__input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
   <button class="search-form__button js-search-btn" type="submit">
-    <img class="logo-search" src="../src/images/search.png" alt="search" loading="lazy" />
+    <img class="logo-search" src="./images/search.png" alt="search" loading="lazy" />
  </button>
 </form>
 
