add infinity scroll

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
  </button>
 </form>
 
-<div class="gallery">
+<div class="gallery container">
   <!-- Карточки изображений -->
 </div>
+      <div id="sentinel"></div>
 
       <div class="container_load-more">
         <button type="button" class="load-more is-hidden"> Load More
